--- a/portal-theme/pom.xml
+++ b/portal-theme/pom.xml
@@ -31,6 +31,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
 				<configuration>
 					<encoding>UTF-8</encoding>
 					<source>1.5</source>
@@ -81,7 +82,7 @@
 		</dependency>
 	</dependencies>
 	<properties>
-		<liferay.auto.deploy.dir>../bundles/liferay-portal-6.0/deploy</liferay.auto.deploy.dir>
+		<liferay.auto.deploy.dir>${env.LIFERAY_HOME}/deploy</liferay.auto.deploy.dir>
 		<liferay.theme.parent>classic</liferay.theme.parent>
 		<liferay.theme.type>vm</liferay.theme.type>
 		<liferay.version>6.0.5</liferay.version>
